# sim-world

./: .gitignore  CMakeLists.txt  README.md  sim-world.sln
green-sim/: Green-sim.drawio  green-sim.vcxproj  green-sim.vcxproj.filters
green-sim-test/: green-sim-test.vcxproj  test.cpp  transformation_module_test.cpp
green-sim/res/shaders/: compute-shader.comp  fragment-shader.frag  fragment-shader.shader  vertex-shader.vert
green-sim/src/: Attribute.h  Entity.h  GL-component.h  Process.h  compute-mesh.h  main.cpp  main.h  math.cpp  math.h  mesh.h  resource-manager.cpp  spherical-mesh-builder.cpp  spherical-mesh-builder.h  spherical-mesh.cpp  spherical-mesh.h  spherical-tensor.cpp  spherical-tensor.h  transformation-module.cpp  transformation-module.h  translation_module.h
green-sim/src/builders/: program-builder.cpp  program-builder.h  spherical-mesh-builder.cpp  spherical-mesh-builder.h
green-sim/src/deprecated/: __compute-mesh.h  __spherical-mesh-builder.cpp  __spherical-mesh-builder.h
include/: fi.hpp  main.h  spherical-mesh-builder.h  transformation-module.h
include/shared/: lalo.hpp
include/static/: foo.hpp
shaders/: vertex-shader.vert
src/: fi.cpp  foo.cpp  lalo.cpp  main.cpp  spherical-mesh-builder.cpp  transformation-module.cpp
src/deprecated/: __mesh.h
